# tumorsphere_culture

./: .coverage  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  animate_with_dots.py  animate_with_spheres.py  cells.py  core.py  core2.py  culture.py  dev-requirements.txt  more_interesting.py  ovito_data_culture_pd=0.0_ps=0.7_realization_0.10  ovito_data_culture_pd=0.0_ps=0.7_realization_0.12  ovito_data_culture_pd=0.0_ps=0.7_realization_0.15  ovito_data_culture_pd=0.0_ps=0.7_realization_0.17  ovito_data_culture_pd=0.0_ps=0.7_realization_0.5  ovito_data_culture_pd=0.0_ps=0.7_realization_1.2  ovito_data_culture_pd=0.0_ps=0.7_realization_1.7  ovito_data_culture_pd=0.0_ps=0.7_realization_2.11  ovito_data_culture_pd=0.0_ps=0.7_realization_2.14  ovito_data_culture_pd=0.0_ps=0.7_realization_2.21  ovito_data_culture_pd=0.0_ps=0.7_realization_2.23  ovito_data_culture_pd=0.0_ps=0.7_realization_3.16  pyproject.toml  requirements.txt  testing.py  testing_testing.py  things_just_got.py  tox.ini
UML/: classes.mmd  packages.mmd
data/data_Lucas/: 0.20.prom  0.50.prom  0.60.prom
data/data_Lucas_3D/: 0.10.prom  0.30.prom  0.40.prom  0.70.prom
data/sim_10_back_to_serafin/: tumorsphere-0.0.1-py3-none-any.whl
data/sim_10_first_serafin_sql/: submit_sim_10_1.sh
data/sim_11_small_sim_osaka/: submit_sim_11.sh
data/sim_12_less_realizations/: sim_12.csv  sim_12.db  submit_sim_12.sh
data/sim_3_ps_close_to_pc/: file1.py  (+1 more)
examples/: Exploration.ipynb  Simulation data.ipynb  Simulation object example.ipynb  Untitled.ipynb  csc_culture.py  csc_culture_animate_to_ovito.py  dcc_culture.py  more_interesting.py  simulation_object_example.py  testing.py  testing_new_colors.ipynb  testing_testing.py
ovito_plotting/: first_session_state.ovito  generate_data_ovito.py  generate_data_ovito_old.py  generate_ovito_data.py  lunch.sh  moving_files.sh
simple_radiotherapy/: simple.ipynb  solver.ipynb  solver_t30.ipynb  susceptibility.ipynb
tests/: conftest.py  test_cli.py  test_culture_instantiation.py  test_culture_instantiation_and_simulation.py
tumorsphere/: __init__.py  animate_with_dots.py  animate_with_spheres.py  cells.py  cli.py  culture.py  simulation.py
tumorsphere.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+767 files in other folders)
