[tool.black]
line-length = 79
target-version = ['py310']

[tool.flake8]
extend-ignore =['E203', 'E501']
max-line-length = 79

[tool.pytest.ini_options]
addopts = [
    "--cov=tumorsphere",
    "--cov-report=term-missing",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ipdb]
context=5
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"

# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "tumorsphere"
version = "0.0.1"
dependencies = [
    "click",
    "matplotlib",
    "networkx",
    "plotly",
    "numpy",
    "toml",
    "pandas",
    "scipy",
    "seaborn",
]
# copy y warnings est치n built-in aparentemente (i.e. no hay que importarlas)
# creo que "random" est치 en la misma
# aparentemente "mpl_toolkits" viene en matplotlib

requires-python = ">=3.7"

authors = [{name = "Jer칩nimo Fotin칩s", email = "jerofoti@gmail.com"}]

readme = "README.md"

license = {file = "LICENSE"}

description = "Software for simulating tumorsphere cultures."

keywords = [
    "tumorsphere",
    "cancer",
    "biophysics",
    "cancer stem cell",
    "mathematical modeling",
]

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

urls = { Homepage = "https://github.com/JeroFotinos/tumorsphere_culture", Repository = "https://github.com/JeroFotinos/tumorsphere_culture" }

[project.scripts]
tumorsphere = "tumorsphere.cli:cli"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-black",
    "flake8-pyproject"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tumorsphere", "tumorsphere.*"]
namespaces = false
